@startuml
interface Function{
Double evaluate(Map<String,Double> variables)
String functionToString()
List<String> getVariables(List<String> variables)
}
class Variable{
- String name
}
class Number{
- Double value
}
class Sum{
- Function term1
- Function term2
}
class Sub{
- Function term1
- Function term2
}
class Mult{
- Function term1
- Function term2
}
class Div{
- Function term1
- Function term2
}
class Sqrt{
- Function term1
}
class Power{
- Function term1
- Function term2
}
class Module{
- Function term1
}

Function ..|> Number
Function ..|> Variable
Function ..|> Sum
Function ..|> Sub
Function ..|> Mult
Function ..|> Div
Function ..|> Sqrt
Function ..|> Power
Function ..|> Module
@enduml
